--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(to right, #003366, #006699);
+    background-color:rgba(26, 26, 26, 0.7);
     padding: 15px 30px;
-    color: white;
+    backdrop-filter: blur(10px); 
+    //color: white;
     position: sticky;
     top: 0;
     z-index: 100;
@@ -26,64 +27,63 @@
     font-weight: 500;
   }
   
-  .auth-buttons button {
-    margin-left: 10px;
-    padding: 8px 16px;
+  .button {
+    margin: 0 10px; 
+    padding: 14px 28px; 
+    font-size: 16px;
     border: none;
-    border-radius: 4px;
+    border-radius: 30px; 
     cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+  }
+  
+  .button:hover {
+    transform: scale(1.05);
   }
   
   .login-btn {
     background-color: transparent;
     color: white;
-    border: 1px solid white;
+    border: 2px solid white;
+  }
+  
+  .login-btn:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
   }
   
   .signup-btn {
-    background-color: #ffcc00;
-    color: black;
-    font-weight: bold;
+    background-color: transparent;
+    color: white;
+    border: 2px solid white;
   }
   
-  .hamburger {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-    gap: 5px;
-  }
-  
-  .hamburger .bar {
-    width: 25px;
-    height: 3px;
-    background-color: white;
-    transition: all 0.3s ease;
-  }
-  
+  .signup-btn:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+  }        
   @media (max-width: 768px) {
-    .nav-links,
-    .auth-buttons {
-      display: none;
-    }
+
   
-    .hamburger {
-      display: flex;
-    }
   
-    .nav-links.open {
+    .nav-links {
+      flex-direction: column;
+      gap: 50px;  
+      background-color: #003366;
+      padding: 20px;
+      width: 100%;
       position: absolute;
       top: 70px;
       left: 0;
-      width: 100%;
-      flex-direction: column;
-      background-color: #003366;
-      padding: 20px;
-      display: flex;
-      gap: 10px;
+      display: flex; 
     }
   
-    .auth-buttons {
-      display: none;
+    .button {
+      display:none;
+    }
+    .button-container {
+      display: flex;
+      gap:15px;
     }
   }
   
