--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -62,6 +62,7 @@ body {
 
 .get-started-btn:hover {
   background-color: #ddd;
+  color:black;
 }
 
 .scroll-container {
@@ -88,12 +89,24 @@ body {
   background: white;
   border-radius: 12px;
   display: flex;
+  flex-direction: column; 
   justify-content: center;
   align-items: center;
   font-weight: bold;
   font-size: 1.1rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 10px; 
+  text-align: center;
 }
+
+.ngo-image {
+  width: 90%;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
 
 @keyframes scroll-left {
   0% {
