--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -18,7 +18,7 @@
   .nav-links {
     display: flex;
     list-style: none;
-    gap: 20px;
+    gap: 40px;
   }
   
   .nav-links a {
@@ -69,7 +69,7 @@
     .nav-links {
       flex-direction: column;
       gap: 50px;  
-      background-color: #003366;
+      background-color: transparent;
       padding: 20px;
       width: 100%;
       position: absolute;
