--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -134,7 +134,7 @@ body {
   background: #fff;
   padding: 25px;
   border-radius: 12px;
-  width: 400px;
+  min-width: 450px;
   position: relative;
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
