--- a/src/pages/signinpage/signinpage.css
+++ b/src/pages/signinpage/signinpage.css
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 40px 20px;
   min-height: 60vh;
+  min-width:450px;
 }
 
 .signin-card {
@@ -11,7 +12,7 @@
   padding: 40px;
   border-radius: 16px;
   width: 800px;
-  max-width: 800px; 
+  min-width: 450px; 
   max-height: 70vh; 
   overflow-y: none;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
@@ -31,7 +32,7 @@
   padding: 12px 16px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   background-color: #f9f9f9;
 }
 
