--- a/src/pages/signinpage/signinpage.css
+++ b/src/pages/signinpage/signinpage.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 40px 20px;
-  min-height: 60vh;
+  min-height: 80vh;
   min-width:450px;
 }
 
@@ -13,7 +13,7 @@
   border-radius: 16px;
   width: 800px;
   min-width: 450px; 
-  max-height: 70vh; 
+  max-height: 90vh; 
   overflow-y: none;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
   border: 1px solid #ddd;
@@ -73,6 +73,16 @@
 
 .signup-button:hover {
   background-color: #054f91;
+}
+.popup-close {
+  position: absolute;
+  top: 12px;
+  right: 14px;
+  background: transparent;
+  border: none;
+  font-size: 24px;
+  color: #555;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
