--- a/src/pages/loginpage/loginpage.css
+++ b/src/pages/loginpage/loginpage.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 60vh;
-  //background: linear-gradient(135deg, #f0f4ff, #dfefff);
+  background: linear-gradient(135deg, #f0f4ff, #dfefff);
   padding: 20px;
 }
 
